services/sso/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos-ui
  namespace: sso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kratos-ui
  template:
    metadata:
      labels:
        app: kratos-ui
    spec:
      containers:
        - name: kratos-ui
          image: oryd/kratos-selfservice-ui-node:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: kratos-ui-service
  namespace: sso
spec:
  selector:
    app: kratos-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
